tests/machine/x/rust/cross_join_triple.error
line 0: compile: exit status 1
error[E0308]: mismatched types
  --> /workspace/mochi/tests/machine/x/rust/cross_join_triple.rs:12:125
   |
12 | ...tters { for &b in &bools { tmp1.push(Result { n: n, l: l, b: b }); } } } tmp1 };
   |                                                     ^ expected `i32`, found `&{integer}`
   |
help: consider dereferencing the borrow
   |
12 |     let combos = { let mut tmp1 = Vec::new();for n in &nums { for &l in &letters { for &b in &bools { tmp1.push(Result { n: *n, l: l, b: b }); } } } tmp1 };
   |                                                                                                                             +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.

#[derive(Default, Debug, Clone, PartialEq)]